--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
   <body id="buddy" class="text-center">
     <div>
         <h1>hallo world</h1>
+        <hr>
+        <h2>hier ist H2</h2>
     </div>
   </body>
 </html>
