--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   </head>
   <body id="buddy" class="text-center">
     <div>
-        <h1>hallo world</h1>
+        <h1 class="heroTitle">hallo world</h1>
         <hr>
         <h2>hier ist H2</h2>
     </div>
